--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -13,5 +13,24 @@ body {
     -moz-transform:translate(0px,5px);
 }
 .swal2-confirm {
-    background-color: #DDA15E !important; /* Cambia esto por el color que desees */
+    background-color: #DDA15E !important;
 }
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #FFF;
+    border-bottom-color: #DDA15E;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+    } 
